--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "formik": "^2.2.6",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "react-app-rewired": "^2.1.8",
     "yup": "^0.32.8",
